[gd_scene load_steps=10 format=3 uid="uid://ciqcht1kgj8g0"]

[ext_resource type="Script" uid="uid://cqt4rrvlepcb" path="res://scripts/ui/main_menu.gd" id="1_x2yvf"]
[ext_resource type="Texture2D" uid="uid://btseyiwqf4rvj" path="res://sprites/sky_MM.png" id="2_uhagc"]
[ext_resource type="Texture2D" uid="uid://xshfhsqdpo4o" path="res://sprites/planet.png" id="3_btxxm"]
[ext_resource type="Script" uid="uid://u5nlpg27q6ex" path="res://scripts/ui/main_menu_planet.gd" id="4_wb0q5"]
[ext_resource type="FontFile" uid="uid://dxojsvtnqc87w" path="res://fonts/Times New Normal Regular.ttf" id="6_uhagc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_826wr"]
bg_color = Color(0.889075, 0.624392, 0.509071, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ucygd"]
bg_color = Color(0.936264, 0.795551, 0.695272, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h7a2f"]
bg_color = Color(0.789562, 0.484682, 0.34886, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0.180392)
shadow_size = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mipys"]
bg_color = Color(0.937255, 0.796078, 0.694118, 1)

[node name="Menu" type="Node"]
script = ExtResource("1_x2yvf")

[node name="Background" type="CanvasLayer" parent="."]
layer = 0

[node name="Sky" type="TextureRect" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_uhagc")
stretch_mode = 1

[node name="Planets" type="CanvasLayer" parent="."]

[node name="LeftPlanet" type="Control" parent="Planets"]
layout_mode = 3
anchor_left = 0.032
anchor_top = 0.735
anchor_right = 0.032
anchor_bottom = 0.735
offset_left = 13.136
offset_top = -6.28
offset_right = 13.136
offset_bottom = -6.28

[node name="Sprite2D" type="Sprite2D" parent="Planets/LeftPlanet"]
texture = ExtResource("3_btxxm")
script = ExtResource("4_wb0q5")

[node name="RightPlanet" type="Control" parent="Planets"]
layout_mode = 3
anchor_left = 0.988
anchor_top = 0.4
anchor_right = 0.988
anchor_bottom = 0.4
offset_left = 111.824
offset_right = 111.824

[node name="Sprite2D" type="Sprite2D" parent="Planets/RightPlanet"]
texture = ExtResource("3_btxxm")
script = ExtResource("4_wb0q5")

[node name="UI" type="CanvasLayer" parent="."]
layer = 2

[node name="UIRoot" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Buttons" type="Control" parent="UI/UIRoot"]
layout_mode = 1
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.6
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="Start" type="Button" parent="UI/UIRoot/Buttons"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -125.0
offset_top = -106.0
offset_right = 125.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
mouse_force_pass_scroll_events = false
theme_override_fonts/font = ExtResource("6_uhagc")
theme_override_font_sizes/font_size = 42
theme_override_styles/hover = SubResource("StyleBoxFlat_826wr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ucygd")
theme_override_styles/normal = SubResource("StyleBoxFlat_h7a2f")
text = "Start Game"

[node name="Exit" type="Button" parent="UI/UIRoot/Buttons"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -125.0
offset_top = 30.0
offset_right = 125.0
offset_bottom = 106.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("6_uhagc")
theme_override_font_sizes/font_size = 42
theme_override_styles/hover = SubResource("StyleBoxFlat_826wr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mipys")
theme_override_styles/normal = SubResource("StyleBoxFlat_h7a2f")
text = "Exit"

[node name="Score" type="Label" parent="UI/UIRoot"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.1
offset_left = -274.0
offset_top = -31.8
offset_right = 274.0
offset_bottom = 100.2
grow_horizontal = 2
theme_override_fonts/font = ExtResource("6_uhagc")
theme_override_font_sizes/font_size = 131
text = "Little Prince"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="UI/UIRoot/Buttons/Start" to="." method="_on_start_button_mouse_entered"]
[connection signal="mouse_exited" from="UI/UIRoot/Buttons/Start" to="." method="_on_start_button_mouse_exited"]
[connection signal="pressed" from="UI/UIRoot/Buttons/Start" to="." method="_on_start_button_pressed"]
[connection signal="mouse_entered" from="UI/UIRoot/Buttons/Exit" to="." method="_on_exit_button_mouse_entered"]
[connection signal="mouse_exited" from="UI/UIRoot/Buttons/Exit" to="." method="_on_exit_button_mouse_exited"]
[connection signal="pressed" from="UI/UIRoot/Buttons/Exit" to="." method="_on_exit_button_pressed"]
